--- a/opengraph-fetch/gradle/libs.versions.toml
+++ b/opengraph-fetch/gradle/libs.versions.toml
@@ -2,16 +2,24 @@
 dependencyVersions = "0.43.0"
 junit = "4.13.2"
 jupiter = "5.6.2"
-kotlin = "1.8.0"
 kotest = "5.3.2"
+kotlin = "1.8.0"
+kotlinResult = "1.1.16"
+kotlinxCoroutines = "1.6.4"
+lumber = "0.1.1"
 mavenPublish = "0.22.0"
+skrapeit = "1.1.5"
 
 [libraries]
 junit-junit = { group = "junit", name = "junit", version.ref = "junit" }
 junit-jupiter = { group = "org.junit.jupiter", name = "junit-jupiter", version.ref = "jupiter" }
-kotest-assertions-core = { module = "io.kotest:kotest-assertions-core", version.ref = "kotest" }
-kotest-runner-junit5 = { module = "io.kotest:kotest-runner-junit5", version.ref = "kotest" }
+kotest-assertions-core = { group = "io.kotest", name = "kotest-assertions-core", version.ref = "kotest" }
+kotest-runner-junit5 = { group = "io.kotest", name = "kotest-runner-junit5", version.ref = "kotest" }
 kotlin-gradle-plugin = { group = "org.jetbrains.kotlin", name = "kotlin-gradle-plugin", version.ref = "kotlin" }
+kotlinx-coroutines-core = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-core", version.ref = "kotlinxCoroutines" }
+hth-lumber = { group = "is.hth", name = "lumber", version.ref = "lumber" }
+michaelbull-result = { group = "com.michael-bull.kotlin-result", name = "kotlin-result", version.ref = "kotlinResult" }
+skrapeit = { group = "it.skrape", name = "skrapeit", version.ref = "skrapeit" }
 
 [plugins]
 benmanes-dependencyversions = { id = "com.github.ben-manes.versions", version.ref = "dependencyVersions" }
