--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,25 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# Generated files
+bin/
+gen/
+out/
+
+# Gradle files
+.gradle/
+gradle/wrapper/gradle-wrapper.jar
+build/
+
+
+# Local configuration file (sdk path, etc)
+local.properties
+
+# signature files
+/.pgp-keys/
+*.asc
+
+# IntelliJ
+*.iml
+.idea/
