--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,14 +11,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: gradle/wrapper-validation-action@v1
 
       - uses: actions/setup-java@v3
         with:
           distribution: 'zulu'
           java-version: 18
 
-      - uses: gradle/gradle-build-action@v2
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2
+
+      - name: Generate Gradle wrapper
+        run: gradle wrapper
 
       - name: Test
         run: ./gradlew build
@@ -37,7 +40,11 @@ jobs:
           distribution: 'zulu'
           java-version: 18
 
-      - uses: gradle/gradle-build-action@v2
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2
+
+      - name: Generate Gradle wrapper
+        run: gradle wrapper
 
       - name: Sign and upload artifacts
         run: ./gradlew publish
